Fix mobile wrapping bug

--- a/src/App.css
+++ b/src/App.css
@@ -118,14 +118,8 @@
 }
 
 .mobileModelWrapper {
-  /* display: flex; */
   width: 100vw;
-  /* height: 100%; */
-  margin-top: -15vh;
   height: 100%;
-
-  /* border: 1px solid green; */
-  /* height: 85vh; */
 }
 
 .pad {
